# facturasend_integration

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLES.md  INSTALLATION_CHECKLIST.md  MANIFEST.in  NAMING_SERIES.md  PROJECT_STRUCTURE.md  README.md  add_name_to_fixtures.py  fix_fixtures.py  pyproject.toml  setup.py
facturasend_integration/: app.json  hooks.py  install.py  modules.txt
facturasend_integration/config/: desktop.py  docs.py
facturasend_integration/facturasend_integration/: api.py
facturasend_integration/facturasend_integration integration/: __init__.py
facturasend_integration/facturasend_integration/doctype/facturasend_log/: facturasend_log.json  facturasend_log.py
facturasend_integration/facturasend_integration/doctype/facturasend_log_item/: facturasend_log_item.json  facturasend_log_item.py
facturasend_integration/facturasend_integration/doctype/facturasend_queue/: facturasend_queue.js  facturasend_queue.json  facturasend_queue.py
facturasend_integration/facturasend_integration/doctype/facturasend_settings/: facturasend_settings.json  facturasend_settings.py
facturasend_integration/fixtures/: custom_fields_customer.json  custom_fields_item.json  custom_fields_sales_invoice.json  custom_fields_user.json
facturasend_integration/public/css/: facturasend_integration.css
facturasend_integration/public/js/: credit_note.js  debit_note.js  facturasend_integration.js  sales_invoice.js
