[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "facturasend_integration"
authors = [
    {name = "Luis", email = "luis@example.com"}
]
description = "Integración de FacturaSend Paraguay con ERPNext para facturación electrónica"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "requests"
]

[project.urls]
Homepage = "https://github.com/lmacone/facturasend_integration"
Repository = "https://github.com/lmacone/facturasend_integration"

[tool.bench.dev-dependencies]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
